[project]
name = "pypractice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.17",
    "pypdf>=6.6.0",
    "python-multipart>=0.0.21",
    "tavily-python>=0.7.19",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]
